--- a/tasks/host.yml
+++ b/tasks/host.yml
@@ -1,3 +1,3 @@
 ---
 - name: syslog-ng is restarted and enabled
-  service: name=syslog-ng state=restarted enabled=yes
+  service: name=syslog-ng state=started enabled=yes
